[package]
name = "paul-escrow"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.9.4"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
#ahash = {version = "0.8.6", default-features = false }



[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
default = []
